Se cambia logo y se ajusta menu

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -18,6 +18,7 @@
         "txtUsuario": "Nombre de usuario",
         "txtPassword": "Contraseña",
         "txtConfPassword": "Confirmación",
+        "btnRegistrar": "Registrar",
         "FormErrors" : {
             "required": "Campo obligatorio"
         }
