se ajusta tabla general

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -22,5 +22,8 @@
         "FormErrors" : {
             "required": "Campo obligatorio"
         }
+    },
+    "GENERAL": {
+        "filtro": "Filtrar por"
     }
 }
