Se agrega pantalla de proyectos y agregar proyectos

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -35,7 +35,12 @@
     },
     "PROYECTOS": {
         "title": "Proyectos",
-        "txtAgregar": "Agregar proyecto"
+        "txtAgregar": "Agregar proyecto",
+        "txtNombre": "Nombre del proyecto",
+        "txtTipo": "Tipo de proyecto",
+        "txtDireccion": "Dirección",
+        "txtEstrato": "Estrato",
+        "txtComuna": "Comuna"
     },
     "MULTAS": {
         "title": "Multas"
